--- a/src/Css/styles.css
+++ b/src/Css/styles.css
@@ -66,3 +66,12 @@ h1 {
   transition: all 0.2s;
   box-sizing: padding-box;
 }
+
+.addIcon {
+  background: url("https://image.flaticon.com/icons/svg/60/60740.svg") center no-repeat;
+  background-size: contain;
+  padding: 40px;
+  display: table;
+  margin: 20px auto;
+  border: none;
+}
