--- a/src/Css/styles.css
+++ b/src/Css/styles.css
@@ -18,6 +18,11 @@ h1 {
   color: black;
 }
 
+h1 a{
+  text-decoration: none;
+  color: black;
+}
+
 @font-face {
   font-family: "billabong";
   src: url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabongwebfont.eot?#iefix") format("embeddedopentype"), url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.woff") format("woff"), url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabongwebfont.ttf") format("truetype"), url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabongwebfont.svg#billabongregular") format("svg");
